Fix test when resources are loaded from JAR file.